Fix LA-421 computercat LoopAware build + Account Settings label

--- a/internal/httpapi/templates/dashboard_header.tmpl
+++ b/internal/httpapi/templates/dashboard_header.tmpl
@@ -9,7 +9,7 @@
     data-loopaware-user-menu="true"
     display-mode="avatar"
     logout-url="/login"
-    menu-items='[{"label":"Account settings","action":"account-settings"}]'
+    menu-items='[{"label":"Account Settings","action":"account-settings"}]'
   ></mpr-user>
 </mpr-header>
 {{end}}
